[package]
description = "Wrapper around the Quantum Exact Simulation Toolkit (QuEST)"
edition = "2021"
homepage = "https://github.com/marek-miller/quest-bind"
keywords = ["quantum", "circuit", "simulator", "wrapper"]
license = "MIT"
name = "quest_bind"
readme = "README.md"
repository = "https://github.com/marek-miller/quest-bind.git"
version = "0.3.2"

[features]
f32 = []
gpu = []
mpi = []

[dependencies]
log = "0.4.19"
num = "0.4.0"
rand = "0.8.5"

[build-dependencies]
cmake = "0.1.50"
